--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -66,7 +66,7 @@
                             {# Empty option -> “Use a new address” #}
                             <option value="">Use a new address</option>
 
-                            {# Loop over each saved address in the form’s queryset #}
+                            {# Loop over each saved address in the forms queryset #}
                             {% for addr in form.fields.saved_address.queryset %}
                               <option
                                 value="{{ addr.id }}"
