--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -58,7 +58,7 @@
 
                 <!-- Billing/Shipping Details -->
                 <fieldset class="px-3 mb-4">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Billing & Shipping</legend>
+                    <legend class="fieldset-labegit adl small text-black px-2 w-auto">Billing & Shipping</legend>
                 <!-- Saved Addresss Dropdown -->
                     <div class="form-group">
                         <label for="id_saved_address">Saved Shipping Address</label>
