Create new app called core, new model, view and urls pattern for FAQ, faq_list.html and decommision faq.html, relates to 22

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,8 +8,8 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="/hurleys/">Hurleys</a></li>
           <li class="nav-item"><a class="nav-link" href="/accessories/">Accessories</a></li>
-          <li class="nav-item"><a class="nav-link" href="/how-to-measure/">Measure</a></li>
-          <li class="nav-item"><a class="nav-link" href="/faq/">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'faq_list' %}">FAQ</a>
+          </li>
           {% if user.is_authenticated %}
           <!-- If someone is already show their username and a “Log out” link -->
             <li class="nav-item">
