Fix link to GAA in FAQ by adding |safe, reinstate how to measure in main-nav, update testing.md to include safe bug fix

--- a/core/templates/core/faq_list.html
+++ b/core/templates/core/faq_list.html
@@ -56,7 +56,7 @@
                aria-labelledby="heading{{ faq.pk }}"
                data-parent="#faqAccordion">
             <div class="card-body">
-              {{ faq.answer|linebreaks }}
+              {{ faq.answer|safe }}
             </div>
           </div>
         </div>
