Fix redirect staff to faq, change settings redirect, change faq_list to faq in views and nav bar and urls, relates to #22

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,7 +13,7 @@
               How to Measure
             </a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="{% url 'faq_list' %}">FAQ</a>
+          <li class="nav-item"><a class="nav-link" href="{% url 'faq' %}">FAQ</a>
           </li>
           {% if user.is_authenticated %}
           <!-- If someone is already show their username and a “Log out” link -->
