Change position of url main patters to fix faq redirect for staff, update base.html to collect static

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,7 @@
     <title>GAA Store - {% block extra_title %}{% endblock %}</title>
     <!-- Stripe -->
     <script src="https://js.stripe.com/v3/"></script>
+    {% load static %}
     {% block extra_css %}{% endblock %}
   </head>
   <body>
