Fix items not displaying profile order by amending views.py and order_detail.html, apply styling, indent order items to display all items

--- a/checkout/templates/checkout/order_detail.html
+++ b/checkout/templates/checkout/order_detail.html
@@ -2,71 +2,94 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'checkout/css/order_detail.css' %}">
+{% endblock %}
+
 {% block content %}
-<div class="container mt-5">
-  <h1>Order #{{ order.order_number }} Details</h1>
-  <p>
-    Placed on: {{ order.date_placed|date:"F j, Y, g:i a" }}<br>
-    Total: €{{ order.total_price|floatformat:2 }}
+<div class="order-detail-container">
+
+
+  <h2 class="order-detail-heading">
+    <span class="label">Order</span>
+    <span class="order-number">#{{ order.order_number }}</span>
+  </h2>
+
+  <p class="order-date">
+    <strong>Placed on:</strong>
+    {{ order.order_date|date:"F j, Y, g:i a" }}
+  </p>
+  <p class="order-total">
+    <strong>Total:</strong>
+    €{{ order.total_price|floatformat:2 }}
   </p>
 
   <hr>
 
-  <h4>Shipping Address</h4>
-  {% if order.shipping_address %}
-    <p>
-      {{ order.shipping_address.full_name }}<br>
-      {{ order.shipping_address.street_address1 }}<br>
-      {% if order.shipping_address.street_address2 %}
-        {{ order.shipping_address.street_address2 }}<br>
-      {% endif %}
-      {{ order.shipping_address.town_or_city }}, {{ order.shipping_address.county }}<br>
-      {{ order.shipping_address.eircode }}<br>
-      {{ order.shipping_address.country.name }}
-    </p>
-  {% else %}
-    <p><em>No shipping address on file.</em></p>
-  {% endif %}
-
-  <hr>
+  <section class="shipping-address">
+    <h4>Shipping Address</h4>
+    {% if order.shipping_address %}
+      <address>
+        {{ order.shipping_address.full_name }}<br>
+        {{ order.shipping_address.street_address1 }}<br>
+        {% if order.shipping_address.street_address2 %}
+          {{ order.shipping_address.street_address2 }}<br>
+        {% endif %}
+        {{ order.shipping_address.town_or_city }}, {{ order.shipping_address.county }}<br>
+        {{ order.shipping_address.eircode }}<br>
+        {{ order.shipping_address.country.name }}
+      </address>
+    {% else %}
+      <p><em>No shipping address on file.</em></p>
+    {% endif %}
+  </section>
 
   {% if order.is_gift and order.gift_message %}
-    <h4>Gift Message</h4>
-    <div class="card mb-4">
-      <div class="card-body">
+    <hr>
+    <section class="gift-message">
+      <h4>Gift Message</h4>
+      <div class="gift-card">
         {{ order.gift_message|linebreaks }}
       </div>
-    </div>
+    </section>
   {% endif %}
 
   <hr>
-  <h4>Items</h4>
-  {% comment %}
-    If you have an OrderItem model (with related_name="items"), use order.items.all
-    Otherwise adjust to how you store line items.
-  {% endcomment %}
-  {% if order.items.all %}
-    <ul class="list-group mb-4">
-      {% for item in order.items.all %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <div>
-            {{ item.product.name }}
-            {% if item.size %}(Size: {{ item.size }}){% endif %}
-            {% if item.color %}(Color: {{ item.color }}){% endif %}
-            <br>
-            Qty: {{ item.quantity }}
-          </div>
-          <span>€{{ item.line_total|floatformat:2 }}</span>
-        </li>
-      {% endfor %}
-    </ul>
-  {% else %}
-    <p><em>No line items found.</em></p>
-  {% endif %}
+
+  <section class="order-items">
+    <h4>Items</h4>
+
+    {% if order.lineitems.all %}
+      <ul class="items-list">
+        {% for item in order.lineitems.all %}
+          <li class="item-row">
+            <div class="item-desc">
+              <p class="product-name">{{ item.product.name }}</p>
+              {% if item.size %}
+                <p class="product-detail">Size: {{ item.size }}</p>
+              {% endif %}
+              {% if item.color %}
+                <p class="product-detail">Color: {{ item.color }}</p>
+              {% endif %}
+              <p class="product-qty">Qty: {{ item.quantity }}</p>
+            </div>
+            <div class="item-price">
+              €{{ item.lineitem_total|floatformat:2 }}
+            </div>
+          </li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p class="no-items"><em>No line items found.</em></p>
+    {% endif %}
+  </section>
 
   <hr>
-  <a href="{% url 'profile' %}" class="btn btn-secondary">
-    ← Back to My Profile
-  </a>
+
+  <div class="back-link-container">
+    <a href="{% url 'profile' %}" class="btn btn-secondary back-to-profile">
+      ← Back to My Profile
+    </a>
+  </div>
 </div>
 {% endblock %}
