--- a/templates/base.html
+++ b/templates/base.html
@@ -82,7 +82,7 @@
               <div class="d-flex justify-content-center justify-content-md-end">
                 <a href="https://facebook.com" class="text-white mx-2">Facebook</a>
                 <a href="/privacy-policy/" class="text-white mx-2">Privacy Policy</a>
-                <a href="/contact-us/" class="text-white mx-2">Contact Us</a>
+                <a href="{% url 'contact_us' %}" class="text-white mx-2">Contact Us</a>
               </div>
             </div>
           </div>
