Add meta descriptive and keywords to base.html, hurley_shop.html and accessories_html, relates to #23

--- a/products/templates/products/accessories_shop.html
+++ b/products/templates/products/accessories_shop.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block meta_keywords %}
+sliotars, hurling helmets, camogie, grips, best hurley helmets, GAA, club gear
+{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
     <h1 class="text-center">Accessories</h1>
