--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block meta_keywords %}
+Hurleys, Camogie Hurleys, hurley makers, GAA Gear, Best hurleys, bambu hurleys, goalie hurleys
+{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
     <h1 class="text-center">Hurleys Shop</h1>
